<resources>
    <string name="app_name">艺匠说</string>
    <string name="action_settings">Settings</string>
    <string name="guide_live">立即体验</string>
    <string name="home">首页</string>
    <string name="school">校内</string>
    <string name="chat">消息</string>
    <string name="mine">我</string>
    <string name="login">登录</string>
    <string name="next_step">下一步</string>
    <string name="input_phonenumber">请输入手机号</string>
    <string name="input_author">请输入验证码</string>
    <string name="component">评论</string>
    <string name="transmit">转发</string>
    <string name="like">点赞</string>
    <string name="login_uname_hint">请输入以验证手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_new_user">新用户注册>></string>
    <string name="login_remenber_password">记住密码</string>
    <string name="login_faild">登录失败，清重新登录</string>
    <string name="test">1983年，张国立参加了电视剧《弯弯的石径》的演出。同年转业到四川人民艺术剧院任话剧演员。凭借话剧《朱丽小姐》获得第4届中国戏剧梅花奖最佳男演员奖[6]  。
                        1984年，转业到四川人民艺术剧院任话剧演员，并开始涉足影坛；同年，在故事片《嫌疑犯》中饰主要人物马斌</string>
    <string name="register">注册</string>
    <string name="publish">发布</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="friend">好友</string>
    <string name="my_photo">我的相册</string>
    <string name="has_account_login">已有帐号？立即登录</string>
    <string name="more">更多</string>
    <string name="money">匠币</string>
    <string name="ilike">我想要</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_vidio">我的视频</string>
    <string name="returnPrevious">返回</string>
    <string name="register_input_name">请填写您的昵称</string>
    <string name="register_input_school">请填写您的学校</string>
    <string name="register_input_password">请输入您的登录密码</string>
    <string name="register_input_repeat_password">请重新输入您的登录密码</string>
    <string name="to_get_message">获取验证码</string>
    <string name="new_friend">新的好友</string>
    <string name="group">群组</string>
    <string name="auctioning">拍卖中</string>
    <string name="discover">发现</string>
    <string name="mine_auction">我的</string>
    <string name="my_friend">我的好友</string>
    <string name="private_message">私信</string>
    <string name="message_center">消息中心</string>
    <string name="add_friend">添加好友</string>
    <string name="person_dynomic_message">个人动态</string>
    <string name="book">书画</string>
    <string name="stone_material">石料</string>
    <string name="jade_object">玉器</string>
    <string name="seal_cutting">篆刻</string>
    <string name="tree_art">木艺</string>
    <string name="zi_sha_hu">紫砂壶</string>
    <string name="stone_rubbing">碑帖</string>
    <string name="auction_zone">拍卖区</string>
    <string name="sort_popular">按人气排序</string>
    <string name="sort_time">按时间排序</string>
    <string name="publish_message">发布消息</string>
    <string name="my_auction">我的拍卖</string>
    <string name="auction_all">全部</string>
    <string name="auction_auctioning">参拍中</string>
    <string name="auction_auctioned">已拍下</string>
    <string name="auction_end">已结束</string>
    <string name="auction_not_pay">未付款</string>
    <string name="auction_wait_transport">待发货</string>
    <string name="auction_not_recieve">未收货</string>
    <string name="auction_rubish">草稿箱</string>
    <string name="auction_my_collection">我的收藏</string>
    <string name="auction_add_address">填写收货地址</string>
    <string name="auction_order">拍卖订单</string>
    <string name="auction_state_auctioning">拍品状态：参拍中</string>
    <string name="contitue_get_price">继续出价</string>
    <string name="not_pay">未付款</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="share_hint">分享点什么吧...</string>
    <string name="auction_shop_detail">拍品详情</string>
    <string name="id_auction_range">竞拍排行</string>
    <string name="put_price">出价</string>
    <string name="cancelhandler">取消</string>
    <string name="download_failed">下载失败</string>
    <string name="click_change_descripts">点击此处修改签名</string>
    <string name="manager_ship_address">管理收货地址</string>
    <string name="add_ship_address">添加收货地址</string>
</resources>
