<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/background"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/id_login_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        app:layout_heightPercent="36%"
        app:layout_widthPercent="100%" />


    <com.yjtc.cbg.yjsapp.Widget.ClearEditText
        android:id="@+id/id_login_uname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/id_login_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/Lightblack"
        android:drawableLeft="@mipmap/register_03"
        android:drawablePadding="20dp"
        android:hint="@string/login_uname_hint"
        android:paddingLeft="10dp"
        app:layout_heightPercent="9%"
        app:layout_widthPercent="90%" />


    <com.yjtc.cbg.yjsapp.Widget.ClearEditText
        android:id="@+id/id_login_pwd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/id_login_uname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@color/Lightblack"
        android:drawableLeft="@mipmap/register_06"
        android:drawablePadding="20dp"
        android:hint="@string/login_password_hint"
        android:paddingLeft="10dp"
        app:layout_heightPercent="9%"
        app:layout_widthPercent="90%" />


    <Button
        android:id="@+id/id_login_loginbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/id_login_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@mipmap/baackground_09"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="90%" />


    <CheckBox
        android:id="@+id/id_cb_login"
        style="@style/custom_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/id_login_loginbtn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:text="@string/login_remenber_password"
        android:textColor="@color/Lightgreen" />


    <TextView
        android:id="@+id/id_tv_login_forget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/id_login_loginbtn"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_forget"
        android:textColor="@color/Lightgreen"
        app:layout_heightPercent="3%"
        app:layout_widthPercent="30%" />


    <TextView
        android:id="@+id/id_tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/login_new_user"
        android:textColor="@color/Lightgreen" />


</android.support.percent.PercentRelativeLayout>