<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lightblack">

    <RelativeLayout
        android:id="@+id/id_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/Lightgreen"
        app:layout_heightPercent="36%"
        app:layout_widthPercent="100%">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_top_bar">

            <ImageView
                android:id="@+id/id_mine_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/my_03"/>

            <ImageView
                android:id="@+id/id_mine_edit"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/my_03"/>


        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/id_mine_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:layout_below="@id/id_top_bar"
            android:src="@mipmap/myhead" />

        <TextView
            android:id="@+id/id_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_mine_head"
            android:layout_centerHorizontal="true"
            android:text="艺匠说"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/id_renzheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_uname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已认证"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:drawableLeft="@mipmap/address_18"
                android:gravity="center_vertical"
                android:text="四川省成都市高新区"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_renzheng"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/click_change_descripts"/>


    </RelativeLayout>


    <View
        android:id="@+id/id_top_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/id_top"
        android:background="@color/Deepblack"></View>


    <LinearLayout
        android:id="@+id/id_mine_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_top_line"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton
            android:id="@+id/id_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            app:newsnum="99+"
            app:newstext="@string/publish"></com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="9dp"
            android:background="@color/Lightblack"></View>

        <com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton
            android:id="@+id/id_fans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            app:newsnum="99+"
            app:newstext="@string/fans"></com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="9dp"
            android:background="@color/Lightblack"></View>


        <com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton
            android:id="@+id/id_attention"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            app:newsnum="99+"
            app:newstext="@string/attention"></com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="9dp"
            android:background="@color/Lightblack"></View>


        <com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton
            android:id="@+id/id_friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            app:newsnum="99+"
            app:newstext="@string/friend"></com.yjtc.cbg.yjsapp.Widget.YJSNumTextButton>

    </LinearLayout>


    <TextView
        android:id="@+id/id_mine_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_mine_body"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/my_20"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/my_photo" />


    <TextView
        android:id="@+id/id_mine_vidio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_mine_photo"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/my_23"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/my_vidio" />


    <TextView
        android:id="@+id/id_mine_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_mine_vidio"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/my_25"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/my_collection" />

    <TextView
        android:id="@+id/id_mine_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_mine_collection"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/my_29"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/money" />

    <TextView
        android:id="@+id/id_mine_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_mine_money"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/my_31"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/more" />


</android.support.percent.PercentRelativeLayout>
